--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "danggiapthan",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.7.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.14"
