--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
     "express-handlebars": "^5.3.4",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
+    "mongoose-delete": "^0.5.4",
     "multer": "^1.4.3",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.14"
