--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "bootstrap-icons": "^1.7.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
     "express-handlebars": "^5.3.4",
+    "imgur-uploader": "^4.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "mongoose-delete": "^0.5.4",
