--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,7 +24,9 @@
     "mongoose": "^6.0.12",
     "mongoose-delete": "^0.5.4",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.14"
+    "node-schedule": "^2.1.0",
+    "nodemon": "^2.0.14",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
